fix: Update overview-page to hide the  add building-text and joinBuildingForm while on mobile-view

--- a/src/components/overview/Overview.scss
+++ b/src/components/overview/Overview.scss
@@ -84,4 +84,5 @@
     justify-content: center;
     padding: 1rem;
     color: $primary-dark;
+    margin-bottom: 5rem;
 }
